--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@zxing/browser": "^0.1.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-calendar": "^5.1.0",
+    "react-dom": "^19.0.0",
+    "react-webcam": "^7.2.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
